--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,8 @@
 * text=auto
 ARVR-Proj/Build/UnityPlayer.dll filter=lfs diff=lfs merge=lfs -text
 ARVR-Proj/Library/ArtifactDB filter=lfs diff=lfs merge=lfs -text
+ARVR-Proj/Library/Bee/artifacts/objcopy_5lmi/libil2cpp.dbg.so filter=lfs diff=lfs merge=lfs -text
+ARVR-Proj/Library/Bee/artifacts/objcopy_5lmi/libil2cpp.so filter=lfs diff=lfs merge=lfs -text
+ARVR-Proj/Library/Bee/artifacts/objcopy_5lmi/libil2cpp.sym.so filter=lfs diff=lfs merge=lfs -text
+ARVR-Proj/Library/Bee/artifacts/objcopy_5lmi/stripped/libil2cpp.so filter=lfs diff=lfs merge=lfs -text
+ARVR-Proj/Library/SourceAssetDB filter=lfs diff=lfs merge=lfs -text
